Fix top of picture being cut off

--- a/ui/src/app/pages/home/home.page.scss
+++ b/ui/src/app/pages/home/home.page.scss
@@ -4,25 +4,19 @@
     align-items: center;
     justify-content: center;
     height: 100%;
+    padding-top: 10px;
     background-color: var(--theme-bg);
 
     .headshot {
         border-radius: 50%;
-        max-width: 300px;
+        max-width: 200px;
+        margin-top: 10px;
     }
 
     .text {
         padding: 20px;
 
-        h1 {
-            margin-bottom: 20px;
-        }
-
-        p {
-            margin-bottom: 20px;
-        }
-
-        li {
+        h1, p, li {
             margin-bottom: 20px;
         }
     }
